; ModuleID = '/home/carl/AnghaBench/xhyve/src/extr_pci_emul.c_pci_msix_table_bar.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/extr_pci_emul.c_pci_msix_table_bar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_devinst = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pci_msix_table_bar(%struct.pci_devinst* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.pci_devinst*, align 8
  store %struct.pci_devinst* %0, %struct.pci_devinst** %3, align 8
  %4 = load %struct.pci_devinst*, %struct.pci_devinst** %3, align 8
  %5 = getelementptr inbounds %struct.pci_devinst, %struct.pci_devinst* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 1
  %7 = load i32*, i32** %6, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %9, label %14

9:                                                ; preds = %1
  %10 = load %struct.pci_devinst*, %struct.pci_devinst** %3, align 8
  %11 = getelementptr inbounds %struct.pci_devinst, %struct.pci_devinst* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  store i32 %13, i32* %2, align 4
  br label %15

14:                                               ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %15

15:                                               ; preds = %14, %9
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
